<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black" />

        <RelativeLayout
            android:id="@+id/buttonLearnSimA"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_a"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimAUmum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_a_umum"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black"
                android:textSize="@dimen/choose_sim_button_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimB1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_b1"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimB1Umum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_b1_umum"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimB2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_b2"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimB2Umum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_b2_umum"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimC"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_c"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLearnSimD"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height"
            android:background="@drawable/sim_button"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sim_d"
                android:textSize="@dimen/choose_sim_button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>