<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background_color"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_line_size"
            android:layout_alignParentBottom="true"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/common_size_40"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_a"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimAUmum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/common_size_40"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_a_umum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimB1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_small_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_b1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimB1Umum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_small_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_b1_umum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimB2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_big_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_b2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimB2Umum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_big_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_b2_umum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_motorbike" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_sim_button_height">

            <LinearLayout
                android:id="@+id/buttonLearnSimD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_home"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/choose_sim_button_image_size"
                    android:layout_height="@dimen/choose_sim_button_image_size"
                    android:layout_marginLeft="@dimen/common_size_70"
                    android:src="@drawable/ic_disabled_motorbike" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_12"
                    android:text="@string/sim_d"
                    android:textColor="@color/black"
                    android:textSize="@dimen/choose_sim_button_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_line_size"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
